--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: 'Gilroy';
+  src: url('../fonts/Gilroy-ExtraBold.woff2');
+}
+
+@font-face {
+  font-family: 'Gilroy Light';
+  src: url('../fonts/Gilroy-Light.woff2');
+}
+
 body {
   background-color: #21292f;
   overflow-x: hidden;
